# strato-trade

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
strato-client/: Cargo.toml  README.md
strato-client/src/: main.rs  mft.rs
strato-client/src/grid/: dynamic.rs
strato-client/src/mft/: stochastic_arbitrage.rs
strato-ddhp/: Cargo.toml  README.md
strato-ddhp/src/: lib.rs
strato-exchange/: Cargo.toml
strato-model/: Cargo.toml
strato-model/examples/: hft_oir_backtest.rs
strato-model/src/: hft.rs  lib.rs  mft.rs  trend.rs
strato-model/src/grid/: dynamic.rs
strato-model/src/hft/: hft_oir.rs
strato-model/src/ma/: ema_cross.rs
strato-model/src/mft/: delta_scalping.rs  opre_risk_arbitrage.rs  stochastic_arbitrage.rs
strato-model/src/pricing/: bs.rs
strato-model/src/trend/: ema_cross.rs
strato-portfolio/: Cargo.toml
strato-utils/: Cargo.toml
strato-utils/src/: lib.rs  relative_depths.rs  ta.rs
strato-utils/src/ta/: atr.rs  ema.rs  rma.rs  sma.rs
strato-utils/src/vars/: ohlc.rs
