[package]
name = "strato-model"
version = "0.1.0"
edition = "2021"

[dependencies]
strato-pricer = { git = "ssh://git@github.com/huetils/strato-pricer.git" }
strato-utils = { path = "../strato-utils" }
barter-data = { git = "ssh://git@github.com/jabratech/barter-data-rs.git" }
barter-integration = "0.7.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tokio = "1.39.0"
chrono = "0.4.38"
hftbacktest = { git = "https://github.com/nkaz001/hftbacktest.git" }
anyhow = "1.0.86"
good_lp = "1.8.1"
statrs = "0.17.1"
